fix up overlapping

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -63,6 +63,7 @@ body, html {
 
 #sidebar {
     width: 100%;
+    height: 120px;
     padding: 16px;
     overflow-y: hidden;
     overflow-x: auto;
